docker-compose/templates/mongodb-container-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml -c --replicas=1
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: mongodb-container
  name: mongodb-container
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: mongodb-container
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose.yml -c --replicas=1
        kompose.version: 1.26.0 (40646f47)
      creationTimestamp: null
      labels:
        io.kompose.network/zdmpuda: "true"
        io.kompose.service: mongodb-container
    spec:
      containers:
        - env:
            - name: MONGO_INITDB_ROOT_PASSWORD
              value: rootpassword
            - name: MONGO_INITDB_ROOT_USERNAME
              value: root
          image: mongo:5.0
          name: mongodb
          ports:
            - containerPort: 27017
          resources: {}
          volumeMounts:
            - mountPath: /data/db
              name: mongodb-data-container
      hostname: mongodb
      restartPolicy: Always
      volumes:
        - name: mongodb-data-container
          persistentVolumeClaim:
            claimName: mongodb-data-container
status: {}
