docker-compose/templates/xafserver-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml -c --replicas=1
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: xafserver
  name: xafserver
spec:
  ports:
    - name: "4000"
      port: 4000
      targetPort: 80
  selector:
    io.kompose.service: xafserver
status:
  loadBalancer: {}
