docker-compose/templates/zdmpudabackend-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml -c --replicas=1
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: zdmpudabackend
  name: zdmpudabackend
spec:
  ports:
    - name: "5000"
      port: 5000
      targetPort: 80
  selector:
    io.kompose.service: zdmpudabackend
status:
  loadBalancer: {}
