docker-compose/templates/zdmpudacomponentbackendwebapi-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml -c --replicas=1
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: zdmpudacomponentbackendwebapi
  name: zdmpudacomponentbackendwebapi
spec:
  ports:
    - name: "6000"
      port: 6000
      targetPort: 80
  selector:
    io.kompose.service: zdmpudacomponentbackendwebapi
status:
  loadBalancer: {}
