docker-compose/templates/zdmpuda-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: zdmpuda
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              io.kompose.network/zdmpuda: "true"
  podSelector:
    matchLabels:
      io.kompose.network/zdmpuda: "true"
